Bug 507053 - Background does not get repainted correctly
Summary: Background does not get repainted correctly
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-14 22:10 UTC by Albert Astals Cid
Modified: 2025-07-15 17:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2025-07-14 22:10:24 UTC
UMMARY


STEPS TO REPRODUCE
* Create a new document
* Write hola in 5 different lines
* Go to the first one, select it
* View looks like https://i.imgur.com/NJ7PjHq.png
* Press Ctrl+H
* View looks like https://i.imgur.com/tsok8J2.png


SOFTWARE/OS VERSIONS
KDE Frameworks Version: 6.16 
Qt Version:  6.9.1
Comment 1 Albert Astals Cid 2025-07-14 22:21:41 UTC
This seems to possibly be a ktexteditor regression, but you are the experts :)
Comment 2 Bug Janitor Service 2025-07-15 10:36:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/823
Comment 3 Waqar Ahmed 2025-07-15 17:14:06 UTC
Git commit 2b493aa1d33964871b78830402f240e824f40074 by Waqar Ahmed.
Committed on 15/07/2025 at 10:35.
Pushed by cullmann into branch 'master'.

Draw all text background ourselves instead of just selection

Its a lot simpler this way and we already do it for RTL since a couple
of years.

M  +17   -78   src/render/katerenderer.cpp
M  +2    -3    src/render/katerenderer.h

https://invent.kde.org/frameworks/ktexteditor/-/commit/2b493aa1d33964871b78830402f240e824f40074