Draw all text background ourselves instead of just selection

Its a lot simpler this way and we already do it for RTL since a couple
of years.

BUG: 507053